<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <me.abhinay.input.CurrencyEditText
        android:id="@+id/et_tarifauser"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/imb_teclado"
        android:layout_toEndOf="@+id/tarifa_user"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/ingre"
        android:inputType="number"
        android:maxLength="10"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/imb_teclado"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/Horas"
        app:srcCompat="@drawable/tecladouno" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_tarifauser"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/Selec" />

    <RadioGroup
        android:id="@+id/radiogrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp">

        <RadioButton
            android:id="@+id/rbtn_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Horas" />

        <RadioButton
            android:id="@+id/rbtn_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Minutos" />
    </RadioGroup>

    <TimePicker
        android:id="@+id/pikerxd"
        style="@android:style/Widget.Material.TimePicker"
        android:layout_width="314dp"
        android:layout_height="124dp"
        android:layout_below="@+id/radiogrup"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:numbersBackgroundColor="#FFFFFF"
        android:numbersTextColor="#FFFFFF"
        android:timePickerMode="spinner" />

    <LinearLayout
        android:id="@+id/asdf"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pikerxd"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/horini" />

            <TextView
                android:id="@+id/tv_horaInicial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Trespuntos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/horfini" />

            <TextView
                android:id="@+id/tv_horaFinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Trespuntos" />
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pikerxd"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/asdf">

        <RadioButton
            android:id="@+id/rb_RegistrarInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A" />

        <RadioButton
            android:id="@+id/rb_RegistradoF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_HT"
        android:layout_width="367dp"
        android:layout_height="30dp"
        android:layout_below="@+id/asdf"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/antic"
        android:text="@string/Trespuntos"
        android:textColor="#181B2C"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/textView"
        android:background="#1B03A9F4"
        android:gravity="center"
        android:text="@string/ingre"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tarifa_user"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/antic"
        android:gravity="center"
        android:text="@string/tarifaxd"
        android:textColor="#1A2143"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tarifa_user"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/textView"
        android:background="#1B03A9F4"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:text="@string/TarifaT"
        android:textColor="#3F51B5"
        android:textSize="14sp" />

</RelativeLayout>